Criando repositório e controller para doctor info
